k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-backend-ingress
  namespace: team-4
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "webapprouting.kubernetes.azure.com"
  tls:
  - hosts:
    - team-4.retreat.alerant.hu
    secretName: team-4-tls
  rules:
  - host: team-4.retreat.alerant.hu
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
